--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>AuctionVistas</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'features.css' %}">
     <style>
         body {
             margin: 0;
